
2020-12-09  Ron Norman <rjn@inglenet.com>
	* cobc.c: Now calls cob_get_sig_name {in common.c} to get signal name
	* codegen.c (output_dump_code): Only emits code to catch abort 
	      when HAVE_SIGACTION is defined 

2020-12-08  Ron Norman <rjn@inglenet.com>

	* error.c: Improve the check for being in a new section/paragraph

2020-12-07  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): Change to dump INDEXED BY variables
	  used in a record before the record is dumped

2020-12-07  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): emit code for BASED/LINKAGE fields
	  to catch SIGSEGV/SIGBUS/SIGFPE and then skip the dump of that record

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): codegen to output INDEXED BY variables

2020-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (remove_trailing_slash) [_MSC_VER]: new function added to resolve
	  MSVC's issues with trailing slashes

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): changed NULL-checked fields to
	  generate calls to (cob_dump_field) to keep formatting and control there
	  instead of preformatting with use of message-related (cob_dump_output);
	  fixed output for based-check'd OCCURS 01 and comment-only output

2020-12-01  Ron Norman <rjn@inglenet.com>

	* codegen.c (output_dump_code): emit code to check if BASED/LINKAGE fields
	  have a not NULL base address before dumping them; handle depending_on

2020-11-30  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_dump_code): moved out of (output_internal_function)
	* codegen.c (output_dump_code): generate "end of dump" message
	* codegen.c (output_display_fields): always output group OCCURS items,
	  not only the first time; removed duplicated code
	* codegen.c (output_field_display): adjusted variable types to unsigned

2020-11-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Only emit the 'i_len' variable if it is used